[BN-3] draft - Most of that changes is refactoring - find by id fix - delete by id fix - tests refactoring